# manifest-builder

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.buildkite/: pipeline.yaml  pipelinegen.toml
.github/workflows/: publish.yml  test.yml
conf/: config.toml  example.toml  helmfile.yaml
conf/idelephant/: idelephant.toml
conf/surrealdb/: values.yaml
src/manifest_builder/: __init__.py  api.py  cli.py  config.py  copy.py  generator.py  git_utils.py  handlers.py  helm.py  helmfile.py  public_repo.py  result.py  simple.py  website.py
src/manifest_builder/templates/public-repo/: repository-charts.yaml  repository.yaml  role.yaml  rolepolicy.yaml
src/manifest_builder/templates/simple/: deployment.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
src/manifest_builder/templates/web/: _hugo_container.yaml  _hugo_initcontainers.yaml  _hugo_volumes.yaml  certificate.yaml  deployment.yaml  gateway.yaml  httproute.yaml  service.yaml
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_copy.py  test_generator.py  test_git_utils.py  test_helm.py  test_helmfile.py  test_public_repo.py  test_simple.py  test_website.py
