[project]
name = "manifest-builder"
dynamic = ["version"]
description = "Generate materialized Kubernetes manifests from Helm charts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click",
    "pyyaml",
    "pystache",
]

[project.scripts]
manifest-builder = "manifest_builder.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "simple503",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/manifest_builder/_version.py"
