[project]
name = "manifest-builder"
dynamic = ["version"]
description = "Generate materialized Kubernetes manifests from configuration input"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "pyyaml",
    "pystache",
]

[project.scripts]
manifest-builder = "manifest_builder.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "simple503",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/manifest_builder/_version.py"

[tool.setuptools_scm]
version_scheme = "guess-next-semver"
local_scheme = "node-and-date"

[tool.ruff]
exclude = ["src/manifest_builder/_version.py"]

[[tool.uv.index]]
name = "repo.noa.re"
url = "https://repo.noa.re"
publish-url = "https://repo.noa.re/legacy/"
