[project]
name = "manifest-builder"
dynamic = ["version"]
description = "Generate materialized Kubernetes manifests from configuration input"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "pyyaml",
    "pystache",
    "dulwich>=1.2.4",
]

[project.scripts]
manifest-builder = "manifest_builder.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
    "simple503",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "post-release" }

[tool.hatch.build.hooks.vcs]
version-file = "src/manifest_builder/_version.py"

[tool.ruff]
exclude = ["src/manifest_builder/_version.py"]

[[tool.uv.index]]
name = "repo.noa.re"
url = "https://repo.noa.re"
publish-url = "https://repo.noa.re"
